--- a/graphics/4x5x3.html
+++ b/graphics/4x5x3.html
@@ -24,47 +24,43 @@
             position: absolute;
         }
 
+        #p1, #p2 {
+            top: 432px;
+        }
+
+        #p3, #p4 {
+            bottom: 512px;
+        }
+
         #p1, #p3 {
-            left: 640px;
+            left: 160px;
         }
 
         #p2, #p4 {
-            right: 640px;
-        }
-
-        #p2 {
-            top: 60px;
-        }
-
-        #p3 {
-            bottom: 143px;
-        }
-
-        #p4 {
-            bottom: 83px;
+            right: 160px;
         }
 
         .zd-timer {
-            top: 440px;
+            top: 300px;
             left: 860px;
         }
 
         .zd-social {
-            top: 500px;
-            left: 750px;
-            width: 420px;
-            height: 60px;
+            top: 360px;
+            left: 768px;
+            width: 384px;
+            height: 340px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="'left'"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName" :pos="'right'"></zd-player>
-        <zd-player id="p3" :num="2" :run-name="runName" :pos="'left'"></zd-player>
-        <zd-player id="p4" :num="3" :run-name="runName" :pos="'right'"></zd-player>
-        <zd-social class="zd-social--small"></zd-social>
+        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
+        <zd-player id="p3" :num="2" :run-name="runName" :pos="'bottomleft'"></zd-player>
+        <zd-player id="p4" :num="3" :run-name="runName" :pos="'bottomleft'"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
