--- a/graphics/1x3x2.html
+++ b/graphics/1x3x2.html
@@ -19,40 +19,24 @@
             width: 1920px;
             position: relative;
         }
-        
-        #app > * {
+
+        #p1 {
             position: absolute;
-        }
-
-        #p1, #p3 {
-            left: 640px;
-        }
-
-        #p2, #p4 {
-            right: 640px;
-        }
-
-        #p2 {
-            top: 60px;
-        }
-
-        #p3 {
-            bottom: 143px;
-        }
-
-        #p4 {
-            bottom: 83px;
+            top: 940px;
+            right: 725px;
         }
 
         .zd-timer {
-            top: 440px;
-            left: 860px;
+            position: absolute;
+            top: 940px;
+            right: 200px;
         }
 
         .zd-social {
-            top: 500px;
-            left: 750px;
-            width: 420px;
+            position: absolute;
+            top: 940px;
+            left: 200px;
+            width: 400px;
             height: 60px;
         }
     </style>
@@ -60,10 +44,7 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :run-name="runName" :pos="'left'"></zd-player>
-        <zd-player id="p2" :num="1" :run-name="runName" :pos="'right'"></zd-player>
-        <zd-player id="p3" :num="2" :run-name="runName" :pos="'left'"></zd-player>
-        <zd-player id="p4" :num="3" :run-name="runName" :pos="'right'"></zd-player>
+        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
         <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
