--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -167,9 +167,9 @@
             position: absolute;
             top: 0;
             right: -8px;
-            width: 34px;
+            width: 100px; /* Feather: 34 */
             height: 100%;
-            background: right / auto 66px no-repeat url("../shared/images/ZDFeatherIcon.png");
+            background: right / auto 66px no-repeat url("../shared/images/ZD_Icon.png");
             background-position-x: 0px;
         }
 
@@ -178,7 +178,7 @@
             white-space: nowrap;
             text-align: center;
             text-overflow: ellipsis;
-            padding-right: 30px;
+            padding-right: 96px; /* Feather: 30 */
             height: 100%;
         }
 
@@ -195,8 +195,8 @@
         }
 
         .slide-enter, .slide-leave-to {
-            left: -1520px;
-            background-position-x: 1520px;
+            left: -1454px; /* Feather: -1520 */
+            background-position-x: 1454px; /* Feather: 1520 */
         }
 
         @keyframes slidedown {
