--- a/graphics/upnext.html
+++ b/graphics/upnext.html
@@ -28,21 +28,19 @@ window.onload = function() {
     const app = new Vue({
         el: "#app",
         template: `<div>
-		<img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDMarathon2020.png" />
-		<div style="text-align: center; font-size: 2em; margin-top: 100px;">Starts in {{ time }}</div>
-		<zd-social style="margin-top: 100px;"></zd-social>
-	</div>`,
-        data: {
-		now: new Date()
-        },
-	computed: {
-		time() {
-			return formatTime(((new Date("7/11/2020 9:00 GMT-0500")) - this.now)/1000);
-		}
-	},
-	created() {
-		setInterval(() => this.now = new Date(), 1000);
-	}
+            <img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDMarathon2020.png" />
+            <div style="text-align: center; font-size: 2em; margin-top: 100px;">Coming up: {{ nextRun }}</div>
+            <zd-social style="margin-top: 100px;"></zd-social>
+        </div>`,
+        replicants: ["runs"],
+        computed: {
+            currentRun() {
+                return this.runs && this.runs.start && this.runs.start.current && this.runs[this.runs.start.current] || {};
+            },
+            nextRun() {
+                return this.currentRun.state === 'queued' ? this.currentRun.name : this.currentRun.next;
+            }
+        }
     });
 };
     </script>
