--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -15,6 +15,7 @@
     <script defer src="../../shared/components/timer.js"></script>
     <script defer src="../../shared/components/levels.js"></script>
     <script defer src="../../shared/components/maiamais.js"></script>
+    <script defer src="../../shared/components/masks.js"></script>
     <script defer src="./readonly-field.js"></script>
     <script defer src="./finish-button.js"></script>
     <script defer src="./player-dialog.js"></script>
