--- a/graphics/2x5x3.html
+++ b/graphics/2x5x3.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -24,7 +24,7 @@
             position: absolute;
         }
         
-        #p1, #p2, .zd-timer {
+        #p1, #p2 {
             top: 576px;
         }
 
@@ -37,23 +37,24 @@
         }
 
         .zd-timer {
-            left: 760px;
+            right: 100px;
+            top: 921px;
         }
 
         .zd-social {
-            top: 576px;
-            right: 0px;
-            width: 960px;
-            height: 421px;
+            left: 0px;
+            top: 921px;
+            width: 400px;
+            height: 60px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :pos="'topright'"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
-        <zd-social :pos="'topleft'"></zd-social>
+        <zd-player id="p1" :num="0" :run-name="runName" :pos="'topright'"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
+        <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
 </html>
