--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -149,6 +149,10 @@
             font-size: 32px;
         }
 
+        .zd-omnibar__ticker img {
+            height: .9em;
+        }
+
         .zd-omnibar__ticker__active--scroll {
             animation: scroll 3s linear;
             transform: translateX(calc(1230px - 100%)); /* 1230px = width of ticker */
