--- a/graphics/countdown.html
+++ b/graphics/countdown.html
@@ -28,7 +28,7 @@ window.onload = function() {
     const app = new Vue({
         el: "#app",
         template: `<div>
-		<img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDMX_2021_logo_CENTERED.png" />
+		<img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDM22.png" />
 		<div style="text-align: center; font-size: 2em; margin-top: 100px;">Starts in {{ time }}</div>
 		<zd-social style="margin-top: 100px;"></zd-social>
 	</div>`,
