--- a/graphics/upnext.html
+++ b/graphics/upnext.html
@@ -28,9 +28,9 @@ window.onload = function() {
     const app = new Vue({
         el: "#app",
         template: `<div>
-            <img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDMX_2021_logo_CENTERED.png" />
-            <div style="text-align: center; font-size: 2em; margin-top: 100px;">Coming up: {{ nextRun }}</div>
-            <zd-social style="margin-top: 100px;"></zd-social>
+            <img style="display: block; height: 300px; margin: auto; margin-top: 100px;" src="../shared/images/ZDM22.png" />
+            <div style="text-align: center; font-size: 2em; margin-top: 50px;">Coming up: {{ nextRun }}</div>
+            <zd-social style="margin-top: 50px;"></zd-social>
         </div>`,
         replicants: ["runs"],
         computed: {
